[gd_scene load_steps=14 format=2]

[ext_resource path="res://interaction/bonuses/fruit.gd" type="Script" id=1]
[ext_resource path="res://art/chirimoya.png" type="Texture" id=2]
[ext_resource path="res://art/spark_particle2.png" type="Texture" id=3]
[ext_resource path="res://sound/chirimoya.wav" type="Sample" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource_name = "roll"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0 ]
}

[sub_resource type="Resource" id=3]

samples/shine = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 100.0

[node name="fruit" type="Area2D"]

input_pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 4
frame = 2

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = -1

[node name="anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/roll = SubResource( 2 )
playback_active = true
playback_speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="screenprox" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[node name="shine" type="Particles2D" parent="."]

amount = 8
lifetime = 0.3
config/emit_timeout = 0.5
emitting = false
config/process_mode = 1
config/half_extents = Vector2( 16, 16 )
local_coords = false
texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 5.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.5
params/final_size = 0.2
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 0.3
color/color = Color( 0.87451, 1, 0.761062, 1 )

[node name="sound" type="Node" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="deathclock" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="magnet" type="Area2D" parent="."]

visible = false
input_pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Transform2D( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="magnet"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = -1

[connection signal="body_entered" from="." to="." method="_on_body_enter" binds=[  ]]

[connection signal="screen_entered" from="screenprox" to="." method="_on_enter_screen" binds=[  ]]

[connection signal="screen_exited" from="screenprox" to="." method="_on_exit_screen" binds=[  ]]

[connection signal="timeout" from="deathclock" to="." method="_on_timeout" binds=[  ]]

[connection signal="body_entered" from="magnet" to="." method="_on_magnet_enter" binds=[  ]]

[connection signal="body_exited" from="magnet" to="." method="_on_magnet_exit" binds=[  ]]
